# graph-quantification

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  bb.edn  compute_apsp.py  eval.clj  kdey_sis_example.ipynb  pyproject.toml  train_and_eval.py
gq/data/: data_artifacts.py  dataset_manager.py  dataset_provider.py  quantification.py  split.py
gq/distributions/: categorical.py  dirichlet.py
gq/experiments/: dataset.py  multiple_run_experiment.py  transductive_experiment.py
gq/layers/: appnp_propagation.py  gcn_conv.py  label_prop.py  linear_activation.py  linear_sequential.py  linear_spectral.py  utils.py
gq/models/: __init__.py  appnp.py  ego_net.py  gat.py  gcn.py  mlp.py  model.py  rgcn.py  sgcn.py  utils.py
gq/models/ql/: memory.py  qgnn.py
gq/nn/: __init__.py  callbacks.py  early_stopping.py  graph_quantification_metrics.py  kernel_graph_quantification.py  loss.py  metrics.py  quantification_metrics.py  transductive_graph_engine.py  utils.py
gq/utils/: config.py  graphs.py  object.py  prediction.py  storage.py  utils.py  visualization_graph.py
